# CQ-YouTube-Plugin

./: .dockerignore  Dockerfile  README.md  TestConfig.yaml  main.py  pyproject.toml
plugin/: __init__.py  plugin.py
plugin/client/: client.py
plugin/tables/: __init__.py  channel_demographics.py  channel_metrics.py  country_metrics.py  video_meta.py  video_metrics.py  videos.py  view_source_detail.py  view_source_type.py
plugin/youtube/: client.py
tools/get_keys/: yt_consent.py
tools/renew_keys/: token_refresh.py
tools/transform/: star_schema.py
tools/transform/db/: __init__.py  destination_models.py  source_models.py
